<resources>
    <string name="app_name">Speaking clock</string>
    <string name="name">Name</string>
    <string name="days">Days</string>
    <string name="on">on</string>
    <string name="time">time</string>
    <string name="weekdays">weekdays</string>
    <string name="every_day">every day</string>
    <string name="weekends">weekends</string>
    <string name="mondayShort">mo</string>
    <string name="tuesdayShort">tu</string>
    <string name="wednesdayShort">we</string>
    <string name="thursdayShort">th</string>
    <string name="fridayShort">fr</string>
    <string name="saturdayShort">sa</string>
    <string name="sundayShort">su</string>
    <string name="mondayLarge">Monday</string>
    <string name="tuesdayLarge">Tuesday</string>
    <string name="wednesdayLarge">Wednesday</string>
    <string name="thursdayLarge">Thursday</string>
    <string name="fridayLarge">Friday</string>
    <string name="saturdayLarge">Saturday</string>
    <string name="sundayLarge">Sunday</string>
    <string name="never">never</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="time_interval">Time interval</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="add_edit_name_error">Please insert a name</string>
    <string name="add_edit_start_end_error">End can time not start before start time</string>
    <string name="created">Created</string>
    <string name="itemDelete">Item deleted</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="main_update_toast">Item updated</string>
    <string name="main_cant_update_error_toast">Item can not be updated</string>
    <string name="main_delete_all_toast">All items deleted</string>
    <string name="Edititem">Edit item</string>
    <string name="Additem">Add item</string>
    <string name="_24_hour_days">24 hour days</string>
    <string name="speech_language">Speech language</string>
    <string name="english">English</string>
    <string name="dutch">Dutch</string>
    <string name="settingsSaved">Settings saved</string>
    <string name="alarm">alarm</string>
    <string name="notification">Notification</string>
</resources>
