<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddEditTimeInstanceActivity">

    <TextView
        android:id="@+id/edit_text_view_name"
        android:textSize="20sp"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/name"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/edit_text_view_start"
        android:textSize="20sp"
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TimePicker
        android:id="@+id/edit_time_picker_start"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:timePickerMode="spinner"
        />

    <TextView
        android:id="@+id/edit_text_view_end"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end" />

    <TimePicker
        android:id="@+id/edit_time_picker_end"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:timePickerMode="spinner" />

    <TextView
        android:id="@+id/edit_text_view_time_interval"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_interval" />

    <NumberPicker
        android:id="@+id/edit_number_picker_time_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/edit_text_view_days"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days" />
    <Button
        android:id="@+id/edit_button_days"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="textStart"
        android:text="@string/none"
        android:gravity="start"/>



</LinearLayout>