<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <Switch
        android:id="@+id/switch_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_on"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/time" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/text_view_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_name"
        android:text="@string/days" />

</RelativeLayout>